# hf-gps-tec

./: .gitignore  CLAUDE.md  README.md  deploy.toml  pyproject.toml
config/: help.toml  hf-gps-tec-config.toml.template
data/: stations.toml
docs/: OVERVIEW.md  RECEIVER.md
scripts/: deploy.sh  install.sh  qa-snapshot.sh
src/hf_gps_tec/: __init__.py  cli.py  config.py  contract.py  qa.py  sigmond_tui.py  stations.py  version.py
src/hf_gps_tec/core/: __init__.py  codeless_pipeline.py  coherent.py  correlate.py  daemon.py  detect.py  detect_codeless.py  output.py  pipeline.py  stream.py
systemd/: hf-gps-tec-qa@.service  hf-gps-tec-qa@.timer  hf-gps-tec@.service
tests/: test_cli_degraded_inventory.py  test_codeless.py  test_config.py  test_contract.py  test_correlate.py  test_detect.py  test_output_reporter_id.py  test_qa.py
